--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             <span class="logocolor">Web</span><span class="logo">Studio</span>
           </a>
           <ul class="list-nav">
-            <li class="list-item"><a class="nav-link" href="./index.html">Студія</a></li>
+            <li class="list-item">
+              <a class="nav-link" href="./index.html">Студія</a>
+            </li>
             <li class="list-item">
               <a class="nav-link" href="./portfolio.html">Портфоліо</a>
             </li>
@@ -35,12 +37,12 @@
         <!-- Контактні дані -->
         <ul class="contacts-list">
           <li class="list-item">
-            <a class="link" href="mailto:info@devstudio.com"
+            <a class="link mail" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li class="list-item">
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link tel" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -100,13 +102,13 @@
           <h2 class="subtitle">Чим ми займаємося</h2>
           <ul class="list work-cards">
             <li class="image-item">
-              <img src="img/box-1.png" alt="фото клавіатури" width="370" />
+              <img src="./images/img/box-1.png" alt="фото клавіатури" width="370" />
             </li>
             <li class="image-item">
-              <img src="img/box-2.png" alt="фото телефона" width="370" />
+              <img src="./images/img/box-2.png" alt="фото телефона" width="370" />
             </li>
             <li class="image-item">
-              <img src="img/box-3.png" alt="фото планшета" width="370" />
+              <img src="./images/img/box-3.png" alt="фото планшета" width="370" />
             </li>
           </ul>
         </div>
@@ -119,31 +121,85 @@
           <h2 class="subtitle">Наша команда</h2>
           <ul class="list team-list">
             <li class="photo-item">
-              <img src="img/ProductDesigner.jpg" alt="фото" width="270" />
+              <img src="./images/img/ProductDesigner.jpg" alt="фото" width="270" />
               <div class="photo-wrapp">
-              <h3 class="team-person">Ігор Дем'яненко</h3>
-              <p class="team-position">Product Designer</p>
+                <h3 class="team-person">Ігор Дем'яненко</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
+              <ul class="social-list">
+                <li class="social-item">
+                  <a
+                    class="social-link link"
+                    href="https://instagram.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="instagram"
+                  >
+                    <svg class="" width="20" haight="20">
+                      <use href="./images/sprite.svg#instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a
+                    class="social-link link"
+                    href="https://twitter.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="twitter"
+                  >
+                    <svg class="" width="20" haight="20">
+                      <use href="./images/sprite.svg#twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a
+                    class="social-link link"
+                    href="https://facebook.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="facebook"
+                  >
+                    <svg class="" width="20" haight="20">
+                      <use href="./images/sprite.svg#facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-item">
+                  <a
+                    class="social-link link"
+                    href="https://linkedin.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="linkedin"
+                  >
+                    <svg class="" width="20" haight="20">
+                      <use href="./images/sprite.svg#linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </li>
+            <li class="photo-item">
+              <img src="./images/img/FrontedDeveloper.jpg" alt="фото" width="270" />
+              <div class="photo-wrapp">
+                <h3 class="team-person">Ольга Рєпіна</h3>
+                <p class="team-position">Frontend Developer</p>
               </div>
             </li>
             <li class="photo-item">
-              <img src="img/FrontedDeveloper.jpg" alt="фото" width="270" />
+              <img src="./images/img/Marketing.jpg" alt="фото" width="270" />
               <div class="photo-wrapp">
-              <h3 class="team-person">Ольга Рєпіна</h3>
-              <p class="team-position">Frontend Developer</p>
+                <h3 class="team-person">Микола Тарасов</h3>
+                <p class="team-position">Marketing</p>
               </div>
             </li>
             <li class="photo-item">
-              <img src="img/Marketing.jpg" alt="фото" width="270" />
+              <img src="./images/img/UIDesignir.jpg" alt="фото" width="270" />
               <div class="photo-wrapp">
-              <h3 class="team-person">Микола Тарасов</h3>
-              <p class="team-position">Marketing</p>
-              </div>
-            </li>
-            <li class="photo-item">
-              <img src="img/UIDesignir.jpg" alt="фото" width="270" />
-              <div class="photo-wrapp">
-              <h3 class="team-person">Михайло Єрмаков</h3>
-              <p class="team-position">UI Designer</p>
+                <h3 class="team-person">Михайло Єрмаков</h3>
+                <p class="team-position">UI Designer</p>
               </div>
             </li>
           </ul>
