--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     rel="noopener noreferrer"
                     aria-label="instagram"
                   >
-                    <svg class="" width="20" haight="20">
+                    <svg class="" width="20" height="20">
                       <use href="./images/sprite.svg#instagram"></use>
                     </svg>
                   </a>
@@ -148,7 +148,7 @@
                     rel="noopener noreferrer"
                     aria-label="twitter"
                   >
-                    <svg class="" width="20" haight="20">
+                    <svg class="" width="20" height="20">
                       <use href="./images/sprite.svg#twitter"></use>
                     </svg>
                   </a>
@@ -161,7 +161,7 @@
                     rel="noopener noreferrer"
                     aria-label="facebook"
                   >
-                    <svg class="" width="20" haight="20">
+                    <svg class="" width="20" height="20">
                       <use href="./images/sprite.svg#facebook"></use>
                     </svg>
                   </a>
@@ -174,7 +174,7 @@
                     rel="noopener noreferrer"
                     aria-label="linkedin"
                   >
-                    <svg class="" width="20" haight="20">
+                    <svg class="" width="20" height="20">
                       <use href="./images/sprite.svg#linkedin"></use>
                     </svg>
                   </a>
