div social list

--- a/index.html
+++ b/index.html
@@ -102,13 +102,25 @@
           <h2 class="subtitle">Чим ми займаємося</h2>
           <ul class="list work-cards">
             <li class="image-item">
-              <img src="./images/img/box-1.png" alt="фото клавіатури" width="370" />
+              <img
+                src="./images/img/box-1.png"
+                alt="фото клавіатури"
+                width="370"
+              />
             </li>
             <li class="image-item">
-              <img src="./images/img/box-2.png" alt="фото телефона" width="370" />
+              <img
+                src="./images/img/box-2.png"
+                alt="фото телефона"
+                width="370"
+              />
             </li>
             <li class="image-item">
-              <img src="./images/img/box-3.png" alt="фото планшета" width="370" />
+              <img
+                src="./images/img/box-3.png"
+                alt="фото планшета"
+                width="370"
+              />
             </li>
           </ul>
         </div>
@@ -121,68 +133,76 @@
           <h2 class="subtitle">Наша команда</h2>
           <ul class="list team-list">
             <li class="photo-item">
-              <img src="./images/img/ProductDesigner.jpg" alt="фото" width="270" />
+              <img
+                src="./images/img/ProductDesigner.jpg"
+                alt="фото"
+                width="270"
+              />
               <div class="photo-wrapp">
                 <h3 class="team-person">Ігор Дем'яненко</h3>
                 <p class="team-position">Product Designer</p>
+                <ul class="social-list">
+                  <li class="social-item">
+                    <a
+                      class="social-link link"
+                      href="https://instagram.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="instagram"
+                    >
+                      <svg class="" width="20" height="20">
+                        <use href="./images/sprite.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="social-link link"
+                      href="https://twitter.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="twitter"
+                    >
+                      <svg class="" width="20" height="20">
+                        <use href="./images/sprite.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="social-link link"
+                      href="https://facebook.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="facebook"
+                    >
+                      <svg class="" width="20" height="20">
+                        <use href="./images/sprite.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-item">
+                    <a
+                      class="social-link link"
+                      href="https://linkedin.com"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      aria-label="linkedin"
+                    >
+                      <svg class="" width="20" height="20">
+                        <use href="./images/sprite.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
-              <ul class="social-list">
-                <li class="social-item">
-                  <a
-                    class="social-link link"
-                    href="https://instagram.com"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    aria-label="instagram"
-                  >
-                    <svg class="" width="20" height="20">
-                      <use href="./images/sprite.svg#instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-item">
-                  <a
-                    class="social-link link"
-                    href="https://twitter.com"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    aria-label="twitter"
-                  >
-                    <svg class="" width="20" height="20">
-                      <use href="./images/sprite.svg#twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-item">
-                  <a
-                    class="social-link link"
-                    href="https://facebook.com"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    aria-label="facebook"
-                  >
-                    <svg class="" width="20" height="20">
-                      <use href="./images/sprite.svg#facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="social-item">
-                  <a
-                    class="social-link link"
-                    href="https://linkedin.com"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    aria-label="linkedin"
-                  >
-                    <svg class="" width="20" height="20">
-                      <use href="./images/sprite.svg#linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
             </li>
             <li class="photo-item">
-              <img src="./images/img/FrontedDeveloper.jpg" alt="фото" width="270" />
+              <img
+                src="./images/img/FrontedDeveloper.jpg"
+                alt="фото"
+                width="270"
+              />
               <div class="photo-wrapp">
                 <h3 class="team-person">Ольга Рєпіна</h3>
                 <p class="team-position">Frontend Developer</p>
