--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               <div class="photo-wrapp">
                 <h3 class="team-person">Ігор Дем'яненко</h3>
                 <p class="team-position">Product Designer</p>
-                <ul class="social-list">
+                <ul class="socials list">
                   <li class="social-item">
                     <a
                       class="social-link link"
@@ -150,7 +150,7 @@
                       rel="noopener noreferrer"
                       aria-label="instagram"
                     >
-                      <svg class="" width="20" height="20">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#instagram"></use>
                       </svg>
                     </a>
@@ -163,7 +163,7 @@
                       rel="noopener noreferrer"
                       aria-label="twitter"
                     >
-                      <svg class="" width="20" height="20">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#twitter"></use>
                       </svg>
                     </a>
@@ -176,7 +176,7 @@
                       rel="noopener noreferrer"
                       aria-label="facebook"
                     >
-                      <svg class="" width="20" height="20">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#facebook"></use>
                       </svg>
                     </a>
@@ -189,7 +189,7 @@
                       rel="noopener noreferrer"
                       aria-label="linkedin"
                     >
-                      <svg class="" width="20" height="20">
+                      <svg class="social-icon" width="20" height="20">
                         <use href="./images/sprite.svg#linkedin"></use>
                       </svg>
                     </a>
