--- a/index.html
+++ b/index.html
@@ -37,12 +37,20 @@
         <!-- Контактні дані -->
         <ul class="contacts-list">
           <li class="list-item">
-            <a class="link mail" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+            <a class="link mail" href="mailto:info@devstudio.com">
+              <svg class="envelope" width="65.32" height="70">
+                <use href="./images/sprite.svg#envelope"></use>
+              </svg>
+              info@devstudio.com</a
             >
           </li>
           <li class="list-item">
-            <a class="link tel" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link tel" href="tel:+380961111111">
+              <svg class="smartphone" width="65.32" height="70">
+                <use href="./images/sprite.svg#smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -66,6 +74,9 @@
           <h2 class="visually-hidden">наші переваги</h2>
           <ul class="list">
             <li class="pref-text">
+              <svg class="picture" width="65.32" height="70">
+                <use href="./images/sprite.svg#antenna"></use>
+              </svg>
               <h3 class="list-title">увага до деталей</h3>
               <p class="list-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -73,6 +84,9 @@
               </p>
             </li>
             <li class="pref-text">
+              <svg class="picture" width="65.32" height="70">
+                <use href="./images/sprite.svg#clock"></use>
+              </svg>
               <h3 class="list-title">пунктуальність</h3>
               <p class="list-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -80,12 +94,18 @@
               </p>
             </li>
             <li class="pref-text">
+              <svg class="picture" width="65.32" height="70">
+                <use href="./images/sprite.svg#diagram"></use>
+              </svg>
               <h3 class="list-title">планування</h3>
               <p class="list-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="pref-text">
+              <svg class="picture" width="65.32" height="70">
+                <use href="./images/sprite.svg#astronaut"></use>
+              </svg>
               <h3 class="list-title">сучасні технології</h3>
               <p class="list-text">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -383,6 +403,58 @@
                   </li>
                 </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Постійні клієнти -->
+
+      <section class="section">
+        <div class="container">
+          <h2 class="subtitle">Постійні клієнти</h2>
+          <ul class="clients">
+            <li class="">
+              <a class="frame" href="">
+                <svg class="clients-box" width="41" height="46.7">
+                  <use href="./images/sprite.svg#yaco"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="">
+              <a class="frame" href="">
+                <svg class="clients-box" width="41" height="46.7">
+                  <use href="./images/sprite.svg#tag_here"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="">
+              <a class="frame" href="">
+                <svg class="clients-box" width="41" height="46.7">
+                  <use href="./images/sprite.svg#company"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="">
+              <a class="frame" href="">
+                <svg class="clients-box" width="41" height="46.7">
+                  <use href="./images/sprite.svg#foster"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="">
+              <a class="frame" href="">
+                <svg class="clients-box" width="41" height="46.7">
+                  <use href="./images/sprite.svg#brend"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="">
+              <a class="frame" href="">
+                <svg class="clients-box" width="41" height="46.7">
+                  <use href="./images/sprite.svg#co_tagline"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
