--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
         <!-- Контактні дані -->
         <ul class="contacts-list">
           <li class="list-item">
-            <a class="link mail" href="mailto:info@devstudio.com">
-              <svg class="envelope" width="65.32" height="70">
+            <a class="link-mail" href="mailto:info@devstudio.com">
+              <svg class="envelope" width="16" height="18">
                 <use href="./images/sprite.svg#envelope"></use>
               </svg>
               info@devstudio.com</a
             >
           </li>
           <li class="list-item">
-            <a class="link tel" href="tel:+380961111111">
-              <svg class="smartphone" width="65.32" height="70">
+            <a class="link-tel" href="tel:+380961111111">
+              <svg class="smartphone" width="16" height="18">
                 <use href="./images/sprite.svg#smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -416,42 +416,42 @@
           <ul class="clients">
             <li class="">
               <a class="frame" href="">
-                <svg class="clients-box" width="41" height="46.7">
+                <svg class="clients-box" width="82" height="65">
                   <use href="./images/sprite.svg#yaco"></use>
                 </svg>
               </a>
             </li>
             <li class="">
               <a class="frame" href="">
-                <svg class="clients-box" width="41" height="46.7">
+                <svg class="clients-box" width="82" height="65">
                   <use href="./images/sprite.svg#tag_here"></use>
                 </svg>
               </a>
             </li>
             <li class="">
               <a class="frame" href="">
-                <svg class="clients-box" width="41" height="46.7">
+                <svg class="clients-box" width="82" height="65">
                   <use href="./images/sprite.svg#company"></use>
                 </svg>
               </a>
             </li>
             <li class="">
               <a class="frame" href="">
-                <svg class="clients-box" width="41" height="46.7">
+                <svg class="clients-box" width="82" height="65">
                   <use href="./images/sprite.svg#foster"></use>
                 </svg>
               </a>
             </li>
             <li class="">
               <a class="frame" href="">
-                <svg class="clients-box" width="41" height="46.7">
+                <svg class="clients-box" width="82" height="65">
                   <use href="./images/sprite.svg#brend"></use>
                 </svg>
               </a>
             </li>
             <li class="">
               <a class="frame" href="">
-                <svg class="clients-box" width="41" height="46.7">
+                <svg class="clients-box" width="82" height="65">
                   <use href="./images/sprite.svg#co_tagline"></use>
                 </svg>
               </a>
@@ -490,6 +490,63 @@
             </li>
           </ul>
         </address>
+      </div>
+      <div class="social-wrapper">
+        <p class="call">приєднуйтесь</p>
+        <ul class="socials list">
+          <li class="social-item">
+            <a
+              class="social-link-footer"
+              href="https://instagram.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="instagram"
+            >
+              <svg class="social-icon" width="20" height="20">
+                <use href="./images/sprite.svg#instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a
+              class="social-link-footer"
+              href="https://twitter.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="twitter"
+            >
+              <svg class="social-icon" width="20" height="20">
+                <use href="./images/sprite.svg#twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a
+              class="social-link-footer"
+              href="https://facebook.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="facebook"
+            >
+              <svg class="social-icon" width="20" height="20">
+                <use href="./images/sprite.svg#facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-item">
+            <a
+              class="social-link-footer"
+              href="https://linkedin.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="linkedin"
+            >
+              <svg class="social-icon" width="20" height="20">
+                <use href="./images/sprite.svg#linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
